@@ -7,6 +7,10 @@
 
 RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Bauke Conijn:
+
+    - Added Users Guide example for auto-generated source code
+
   From Steven Knight:
 
     - Fix explicit dependencies (Depends()) on Nodes that don't have
